Fix small layout issue in PNP inline graphs

--- a/web/htdocs/status.css
+++ b/web/htdocs/status.css
@@ -328,8 +328,6 @@ table.data div.objectlist div {
 
 table.data tr.data td.pnpgraph {
    padding: 0;
-   border-bottom: 1px solid #666;
-   border-right: 1px solid #666;
 }
 
 tr.data td.pnpgraph img {
